--- a/src/data/levels/02_Assembly/05_Branching/chat/en.yml
+++ b/src/data/levels/02_Assembly/05_Branching/chat/en.yml
@@ -65,7 +65,7 @@ step5:
   - "`CPX #3` 'ComPares' [X] with 3, and sets the Zero Flag if they're equal"
   - "[X] has a 7, and that's not equal to 3, so Z = 0"
   - "`BNE @decrement` jumps to that label if the Zero Flag is not set"
-  - which it's not! so it jumped 🦘
+  - which is not! so it jumped 🦘
   - ([X] and 3 were "Not Equal", hence the name)
   responses:
   - oh, I see [oh]
