--- a/src/data/levels/05b_PPU/11_PPUData - Delayed reads/chat/en.yml
+++ b/src/data/levels/05b_PPU/11_PPUData - Delayed reads/chat/en.yml
@@ -1,6 +1,25 @@
 ---
 main:
   messages:
-  - coming soon!
+  - remember how games write to VRAM?
+  - <{PPUAddr_PPUData.png}>
+  - they also can <read> from VRAM, by reading from 📦  ~PPUData~ instead of writing
+  - "this operation also increments the address in 📍  ~PPUAddr~, and has a little quirk:"
+  - all reads are <delayed> by 1, except for the <Palette RAM> section and its mirrors
   responses:
-  - ok [end]
+  - how can we implement the delay? ⌛ [delay]
+
+delay:
+  messages:
+  - simple, when a <read> is requested, you read into a buffer, but then you return the <previous value> of that buffer
+  - |-
+    📚  _-_implement these methods in `PPUData`:_--_
+    *_-_*onLoad**:_--_
+      *_-_*->** initializes ~this.buffer = 0~_--_
+    *_-_*onRead()**:_--_
+      *_-_*->** saves ~this.buffer~ in a variable named ~data~_--_
+      *_-_*->** reads from the PPU address ~ppuAddr.address~ and saves the result into ~this.buffer~_--_
+      *_-_*->** if the address is between $3F00 and $3FFF, assigns ~data = this.buffer~ (skips the buffer)_--_
+      *_-_*->** calls ~this._incrementAddress()~_--_
+      *_-_*->** returns ~data~_--_
+  responses: []
