Starting Sprites (1-6): OAM level

--- a/src/data/levels/04_Memory/01_CPU Memory/chat/es.yml
+++ b/src/data/levels/04_Memory/01_CPU Memory/chat/es.yml
@@ -34,7 +34,7 @@ implement:
   messages:
   - por ahora, solo vamos a implementar el primer rango (🐏  WRAM)
   - 📚  _-_crea una clase `CPUMemory`, usando _--_📄 _-_ ~/tmpl/CPUMemory.js~ como plantilla_--_
-  - 📚  _-_su constructor debería asignar una propiedad `ram` (un `Uint8Array` de 2048 bytes)_--_
+  - 📚  _-_su constructor debería recibir y asignar una propiedad `ram` (un `Uint8Array` de 2048 bytes)_--_
   - |-
     📚  _-_implementa el primer ~TODO~ de cada método:_--_
     *_-_*read(address)**:_--_
