--- a/src/data/levels/05b_PPU/09_Backgrounds 1-2 - Drawing Name tables/chat/en.yml
+++ b/src/data/levels/05b_PPU/09_Backgrounds 1-2 - Drawing Name tables/chat/en.yml
@@ -13,7 +13,7 @@ finally:
   - and try to understand how to render backgrounds in <grayscale>
   - and when you are ready...
   - 📚  _-_create a `BackgroundRenderer` class_--_
-  - 📚  _-_its constructor should assign a `ppu` property with the PPU instance_--_
+  - 📚  _-_its constructor should receive and assign a `ppu` property with the PPU instance_--_
   - |-
     📚  _-_make these changes to the `PPU` class:_--_
     *_-_*constructor**:_--_
@@ -25,7 +25,7 @@ finally:
     *_-_*_onVisibleLine(...)**:_--_
       *_-_*->** if the cycle is ~256~, call ~backgroundRenderer.renderScanline()~_--_
   - |-
-    📚  _-_now, in the `BackgroundRenderer` class:_--_
+    📚  _-_now, in the `BackgroundRenderer` class, define:_--_
     *_-_*renderScanline()**:_--_
       *_-_*->** add the necessary code to render a full scanline of the background_--_
   - bye!
